fixed overlapping element on footer

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -10,6 +10,7 @@ footer {
   color: white;
   text-align: center;
   padding: 0 !important;
+  z-index: 20;
 }
 
 /* end of Footer design*/
